--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2"
   },
